<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Bob The Builder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <color name="bobColor">#FF5A54</color>
    <color name="bobTextColor">#FFFFFF</color>
    <color name="backgroundColor">#3498db</color>
    <color name="backgroundColor2">#3498db</color>
    <color name="bobColorShadow">#E5524B</color>
    <string name="baseImageDescription">Base Image Position</string>
    <string name="builtImageDescription">Built Image for scores</string>
    <string name="unBuiltImageDescription">UnBuilt Image for scores</string>
    <string name="calc">Calculate</string>
    <string name="timerInitVal">30:00</string>
    <string name="initialBuildValue">0</string>
    <string name="initialUnBuildValue">0</string>
    <string name="startButtonLabel">Start Building</string>
    <string name="startBuildingText">Press Build Button to start Building!!</string>
    <string name="duringBuildingText">Hang On, It\'s just started!</string>
    <string name="duringBuildButtonLabel">Kill Bob</string>
    <string name="timeUpMessage">Congrats you built a new building today!!</string>
    
    <string name="duringBuildMessage1">Don\'t look at me!</string>
    <string name="duringBuildMessage2">Go back to your work!</string>
    <string name="duringBuildMessage3">Stay focused!</string>
    <string name="duringBuildMessage4">You are almost there!</string>
    <string name="duringBuildMessage5">Hang in there!</string>
    <string name="duringBuildMessage6">Keep up the good work!</string>
    <string name="duringBuildMessage7">You can do it!</string>
    <string name="duringBuildMessage8">Don\'t give up!</string>
    <string name="duringBuildMessage9">Leave me alone!</string>
    <string name="duringBuildMessage10">Stop phubbing!</string>
    
    <string name="failureStatusMessage">Ohho! :( Try again maybe.ReBuild.</string>
    <string name="successStatusMessage">Kudos! Share your score now ;)</string>
    <string name="goBack">&lt;&lt; Go Back</string>
    
    <string name="lorem_ipsum">Test Content for Slide Testing</string>
	<string name="action_previous">Previous</string>
	<string name="action_next">Next</string>
	<string name="action_finish">Finish</string>
	<string name="go_button">Let\'s Start!</string>
	<string name="walkThroughImageDescription">WalkThrough Background</string>
	<string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>
        
	<string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
	<string name="banner_ad_unit_id">ca-app-pub-5382733936047144/1417772242</string>
	
</resources>
