<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundColor"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    >

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".14"
        android:background="@color/backgroundColor"
        android:gravity="start|center_vertical"
        android:orientation="horizontal" >
        
           <TextView
		            android:id="@+id/goBackTextView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/goBack"
					android:textColor="@color/bobTextColor"
					android:clickable="true"
					android:onClick="mainScreenRedirect"
					android:textAlignment="1"
					android:layout_marginEnd="10dp"
		            android:textSize="17sp" />
    
		   <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/backgroundColor"
		        android:gravity="end|center_vertical"
		        android:orientation="horizontal" >
		        
		        <ImageView
		            android:id="@+id/builtHouse"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:padding="02dp"
		            android:layout_marginEnd="5dp"
		            android:contentDescription="@string/builtImageDescription"
		            android:src="@drawable/built_house" />        
		        <TextView
		            android:id="@+id/buildNumberTextView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/initialBuildValue"
					android:textColor="@color/bobTextColor"
					android:textAlignment="1"
					android:layout_marginEnd="10dp"
		            android:textSize="17sp" />
		        
		        <ImageView
		            android:id="@+id/unBuiltHouse"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:padding="02dp"
		            android:layout_marginEnd="5dp"
		            android:contentDescription="@string/unBuiltImageDescription"
		            android:src="@drawable/un_built_house" />        
		        <TextView
		            android:id="@+id/unBuildNumberTextView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/initialUnBuildValue"
					android:textColor="@color/bobTextColor"
					android:textAlignment="1"
		            android:textSize="17sp" />
              </LinearLayout>
    </LinearLayout>    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:background="@color/backgroundColor"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failureStatusMessage"
			android:textColor="@color/bobTextColor"
			android:textAlignment="1"
			android:layout_marginTop="10dp"
            android:textSize="17sp" />
		
		<ImageView
	            android:id="@+id/imageView2"
	            android:layout_gravity="center"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:adjustViewBounds="true"
				android:maxHeight="440dp"
				android:layout_marginTop="0dp"
	            android:padding="10dp"
	            android:contentDescription="@string/baseImageDescription"
	            android:src="@drawable/building_bob" />
    </LinearLayout>
    
</LinearLayout>